补充缺失功能